# 2kkipm

./: .gitignore  Cargo.toml  README.md
locales/: en.yml  ja.yml
src/: main.rs
