[package]
name = "_2kkipm"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "2kkipm"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
colored     = "2"
dirs        = "5"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
ureq = "=2.12.1"
chrono      = "0.4"
indicatif   = "0.17"
ctrlc       = "3"
encoding_rs = "0.8"
libc = "0.2"
url = "2.5"
# アーカイブ展開 (外部ツールのフォールバック用)
zip         = "8"
sevenz-rust = "0.6"
flate2      = "1"
xz2         = "0.1"
bzip2       = "0.6"
tar         = "0.4"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
